chore: deprecate Java 11, introduce Java 21, fix deprecations & PMD